--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "dotnet: build",
-            "program": "${workspaceFolder}/bin/Debug/net8.0/loxlang.exe",
+            "program": "${workspaceFolder}/cslox/bin/Debug/net8.0/loxlang.exe",
             "args": ["./test_files/closure.lox"],
             "cwd": "${workspaceFolder}",
             "stopAtEntry": false,
