--- a/rslox/Cargo.toml
+++ b/rslox/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "rslox"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+env_logger = "0.11.8"
+log = "0.4.27"
+strum = "0.27"
+strum_macros = "0.27"
+thiserror = "2.0.12"
