--- a/rslox/Cargo.toml
+++ b/rslox/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 env_logger = "0.11.8"
 log = "0.4.27"
+rustc-hash = "2.1.1"
 strum = "0.27"
 strum_macros = "0.27"
 thiserror = "2.0.12"
