--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,26 +4,6 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in library 'rslox'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--lib",
-                    "--package=rslox"
-                ],
-                "filter": {
-                    "name": "rslox",
-                    "kind": "lib"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
         {
             "type": "lldb",
             "request": "launch",
@@ -42,25 +22,25 @@
             "args": [],
             "cwd": "${workspaceFolder}"
         },
-        {
-            "type": "lldb",
-            "request": "launch",
-            "name": "Debug unit tests in executable 'rslox'",
-            "cargo": {
-                "args": [
-                    "test",
-                    "--no-run",
-                    "--bin=rslox",
-                    "--package=rslox"
-                ],
-                "filter": {
-                    "name": "rslox",
-                    "kind": "bin"
-                }
-            },
-            "args": [],
-            "cwd": "${workspaceFolder}"
-        },
+                {
+                    "type": "lldb",
+                    "request": "launch",
+                    "name": "Debug rslox w/ program",
+                    "cargo": {
+                        "args": [
+                            "build",
+                            "--bin=rslox",
+                            "--package=rslox"
+                        ],
+                        "filter": {
+                            "name": "rslox",
+                            "kind": "bin"
+                        }
+                    },
+                    "args": ["./temp.lox"],
+                    "cwd": "${workspaceFolder}"
+                },
+
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
