--- a/rslox/Cargo.toml
+++ b/rslox/Cargo.toml
@@ -4,9 +4,12 @@ name = "rslox"
 version = "0.1.0"
 
 [dependencies]
-env_logger = "0.11.8"
-log = "0.4.27"
+# env_logger = "0.11.8"
+indent = "0.1.1"
+# log = "0.4.27"
 rustc-hash = "2.1.1"
 strum = "0.27"
 strum_macros = "0.27"
 thiserror = "2.0.12"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
